--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -11,6 +11,10 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
+
+  # for l10n
+  flutter_localizations:
+    sdk: flutter
   
   # riverpod
   flutter_riverpod: ^2.1.1
@@ -37,6 +41,13 @@ dependencies:
   responsive_framework: ^0.2.0
   sizer: ^2.0.15
 
+  # for multilingual support
+  l10n_flutter: ^1.0.6
+  
+
+  # for l10n
+  intl: ^0.17.0
+
 
 dev_dependencies:
   flutter_test:
@@ -45,12 +56,15 @@ dev_dependencies:
 
   # freezed
   freezed: ^2.2.1
-  build_runner:
   freezed_annotation:
+
+  # build runner for freezed & l10n
+  build_runner: ^2.3.2
 
 
 flutter:
   uses-material-design: true
+  generate: true # for l10n
 
   
   
